--- a/Full_Stack_Development/HTML/details.html
+++ b/Full_Stack_Development/HTML/details.html
@@ -36,5 +36,32 @@
         <li><a href="https://join.skype.com/invite/uMViQwv9m8yk" target="_blank">Skype</a></li>
         <li><a href="https://bharathguntreddi.onrender.com/" target="_blank">Portfolio</a></li>
     </ul>
+    <h3>Academics:</h3>
+    <table border="2px" cellpadding="9px">
+        <tr>
+            <th>Institution</th>
+            <th>Address</th>
+            <th>Pass out Year</th>
+            <th>Grades</th>
+        </tr>
+        <tr>
+            <td>PGS</td>
+            <td>Visakhapatnam</td>
+            <td>2018</td>
+            <td>9.8</td>
+        </tr>
+        <tr>
+            <td>Narayana</td>
+            <td>Visakhapatnam</td>
+            <td>2020</td>
+            <td>9.5</td>
+        </tr>
+        <tr>
+            <td>VIIT</td>
+            <td>Visakhapatnam</td>
+            <td>2014</td>
+            <td>8.0</td>
+        </tr>
+    </table>
 </body>
 </html>
